[tool.poetry]
name = "muteit"
version = "0.1.0"
description = ""
authors = ["Marsella8 <pietromax.marsella@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.4.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
